Fix T49352: Blender's file browser do not display previews.

Own stupid 'logical inversion' mistake in rBa2677100fef06af.